# adorable-avatars

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
adorable/: Cargo.toml
adorable/src/: face.rs  lib.rs  utils.rs
common/src/: hash.rs  lib.rs  reducers.rs
server/: Cargo.toml
server/src/: main.rs
