[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adorable = { path= "../adorable" }
actix-web = "4"
bytes = { version = "1", features = ["serde"] }
log = "0.4"
env_logger = "0.8.4"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"



[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
